k8s/prod-manifests/posthub.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ns-posthub--env
  labels:
    name: ns-posthub--env

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: posthub--env
  namespace: ns-posthub--env
spec:
  replicas: 1
  selector:
    matchLabels:
      app: posthub--env
  template:
    metadata:
      labels:
        app: posthub--env
    spec:
      containers:
        - name: posthub--env
          image: acr17713.azurecr.io/posthub
          # image: princemokut/posthub
          resources:
            requests:
              memory: "250M"
              cpu: "300m"
            limits:
              memory: "900M"
              cpu: "1100m"
          readinessProbe:
            httpGet:
              path: /api/posthub/healthcheck
              port: 3000
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 5
          ports:
            - containerPort: 3000
      imagePullSecrets:
        - name: posthub-secret

---
apiVersion: v1
kind: Service
metadata:
  name: posthub-service--env
  namespace: ns-posthub--env
spec:
  selector:
    app: posthub--env
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
      name: posthub--env
